--- a/public/styles/Info/styles.css
+++ b/public/styles/Info/styles.css
@@ -5,10 +5,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  box-sizing: border-box;
 
   text-align: center;
 
-  margin-top: 5rem;
+  margin-top: 1rem;
 }
 
 .info__location {
